--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,5 @@ jobs:
 
       - name: Run Google Colab
         run: |
-          curl -L -X POST "https://colab.research.google.com/drive/1RU24QXSrnlDrGVL9VJFkoul9edXdWd8b?forceEdit=true&authuser=0&hl=en"
+          curl -L -X POST "https://colab.research.google.com/drive/YOUR_COLAB_NOTEBOOK_ID?forceEdit=true&authuser=0&hl=en"
+          echo "RUN_FROM_GITHUB=1" >> $GITHUB_ENV
